fix: fixed scrollbar which was visible all the time

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -650,5 +650,5 @@ form[name="new_specialist_form"] input[type="checkbox"] {
 
 .todo-list {
     max-height: 250px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
